# distributedTaskScheduler

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
discovery_service/: Cargo.toml
discovery_service/src/: main.rs
scheduler_client/: Cargo.toml
scheduler_client/src/: lib.rs
scheduler_core/: Cargo.toml
scheduler_core/migrations/: 20250123000000_create_tasks_table.sql
scheduler_core/src/: error.rs  lib.rs  queue.rs  scheduler.rs  state.rs  task.rs  worker.rs
scheduler_core/src/queue/: in_memory.rs  rabbitmq.rs
scheduler_core/src/state/: in_memory_store.rs  postgres.rs
scheduler_service/: Cargo.toml
scheduler_service/src/: handlers.rs  main.rs
worker_service/: Cargo.toml
worker_service/src/: main.rs
