[package]
name = "scheduler_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
dotenv.workspace = true
reqwest = { version = "0.11", features = ["json"] }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
scheduler_core = {path = "../scheduler_core"}