[package]
name = "scheduler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
