[package]
name = "scheduler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
tokio.workspace = true
uuid.workspace = true
dotenv.workspace = true
lapin = "2.3.1"
futures-lite = "1.13.0"
