[package]
name = "worker_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
dotenv.workspace = true
scheduler_core = { path = "../scheduler_core" }
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"